# decoco

./: .git_projects  .gitignore  CMakeLists.txt  DESIGN.md  README.md  packages.conf
include/decoco/: decoco.hpp
src/: CMakeLists.txt  any.cpp  brotli.cpp  bzip2.cpp  deflate.cpp  gzip.cpp  lzma.cpp  shared.cpp  short.cpp  zlib.cpp  zstd.cpp
src/zlib/: adler32.cpp  crc32.cpp  crc32_tables.h  deflate.cpp  deflate.h  inffast.cpp  inffast.h  inflate.cpp  inflate.h  inftrees.cpp  inftrees.h  trees.cpp  zlib.h  zutil.cpp  zutil.h
test/: CMakeLists.txt  brotli.cpp  bzip2.cpp  gzip.cpp  lzma.cpp  short.cpp  zlib.cpp  zstd.cpp
